--- a/src/style.css
+++ b/src/style.css
@@ -209,13 +209,10 @@
 
 
 /* Edit task form CSS */
-
 .editTaskForm, .newTaskForm{
-    display: block;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    position: sticky;
+    bottom: 175px;
+    left: 600px;
     height: 250px;
     width: 300px;
     border: 1px solid;
@@ -247,9 +244,6 @@
     color: black;
     filter: invert(1);
 }
-
-
-
 
 /* BUTTON CSS */
 .newProjectSaveButton, .newProjectCancelButton, .updateTaskButton, .cancelUpdateTaskButton {
