--- a/src/style.css
+++ b/src/style.css
@@ -1,265 +1,272 @@
-*{
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
-.disablePointerEvents{
-    pointer-events: none;
+.disablePointerEvents {
+  pointer-events: none;
 }
 
-#main-grid-layout{
-    display: grid;  
-    grid-template-columns: repeat(5, 1fr);
+#main-grid-layout {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
 }
 
 /* HEADER SECTION START */
-#header-wrapper{
-    grid-column: 1/6;
-    /* background-color: rgb(190, 231, 244); */
-    padding: 5px 0 5px 0;
+#header-wrapper {
+  grid-column: 1/6;
+  /* background-color: rgb(190, 231, 244); */
+  padding: 5px 0 5px 0;
 }
-.headerContainer{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 10% 0 10%;
+.headerContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 10% 0 10%;
 }
-.leftSubSection, .rightSubSection{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 2.2rem;
+.leftSubSection,
+.rightSubSection {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2.2rem;
 }
-.listifyIcon, .userProfileIcon{
-    display: block;
-    height: 30px;
-    margin-right: 10px;
-
+.listifyIcon,
+.userProfileIcon {
+  display: block;
+  height: 30px;
+  margin-right: 10px;
 }
-#current-user-name{
-    font-size: 1rem;
+#current-user-name {
+  font-size: 1rem;
 }
 /* HEADER SECTION END */
 
-
 /* SIDEBAR SECTION START */
-#sidebar-wrapper{
-    grid-column: 1/2;
-    padding: 10px 10px 0 15px;
-    height: 87vh;
-    overflow-y: auto;
+#sidebar-wrapper {
+  grid-column: 1/2;
+  padding: 10px 10px 0 15px;
+  height: 87vh;
+  overflow-y: auto;
 }
 /* width */
 #sidebar-wrapper::-webkit-scrollbar {
-    width: 5px;
-  }
-  /* Track */
+  width: 5px;
+}
+/* Track */
 #sidebar-wrapper::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px grey; 
-    border-radius: 10px;
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
 }
-   
-  /* Handle */
+
+/* Handle */
 #sidebar-wrapper ::-webkit-scrollbar-thumb {
-    background: rgb(190, 231, 244);
-    border-radius: 5px;
+  background: rgb(190, 231, 244);
+  border-radius: 5px;
 }
-  /* Handle on hover */
+/* Handle on hover */
 #sidebar-wrapper::-webkit-scrollbar-thumb:hover {
-    background: rgb(190, 231, 244);
+  background: rgb(190, 231, 244);
 }
 
-.tabItemContainer, .newProjectButton{
-    display: flex;
-    cursor: pointer;
-    padding: 10px 0 10px 15px;
+.tabItemContainer,
+.newProjectButton {
+  display: flex;
+  cursor: pointer;
+  padding: 10px 0 10px 15px;
 }
-.sidebarTabViewIcon{
-    display: block;
-    height: 20px;
-    margin-right: 10px;
+.sidebarTabViewIcon {
+  display: block;
+  height: 20px;
+  margin-right: 10px;
 }
 
-.projectFormContainer{
-    display: flex;
-    flex-direction: column;
-    width: 70%;
-    margin: auto;
+.projectFormContainer {
+  display: flex;
+  flex-direction: column;
+  width: 70%;
+  margin: auto;
 }
 .projectFormContainer input {
-    border: 1px solid blue;
-    border-radius: 50px;
-    padding: 5px;
+  border: 1px solid blue;
+  border-radius: 50px;
+  padding: 5px;
 }
 
-.projectFormButtonContainer{
-    margin: 3px auto 0 auto;
-    display: flex;
-    justify-content: space-around;
-    width: 100%;
-
+.projectFormButtonContainer {
+  margin: 3px auto 0 auto;
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
 }
-.newProjectSaveButton, .newProjectCancelButton{
-    border: none;
-}
-
-.editDeleteWrapper{
-    display: flex;
-    width: 20%;
-    justify-content: space-evenly;
+.newProjectSaveButton,
+.newProjectCancelButton {
+  border: none;
 }
 
-.errorMessage::placeholder{
-    color: red;
+.editDeleteWrapper {
+  display: flex;
+  width: 20%;
+  justify-content: space-evenly;
 }
 
-.projectSidebarItemWrapper{
-    /* This is for each new project tab that is created by the user */
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.errorMessage::placeholder {
+  color: red;
 }
 
-.hideProjectTitle{
-    display: none;
+.projectSidebarItemWrapper {
+  /* This is for each new project tab that is created by the user */
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.hideProjectTitle {
+  display: none;
 }
 /* SIDEBAR SECTION END */
 
 /* CENTRAL VIEW SECTION START */
-#current-view-wrapper{
-    grid-column: 2/6;
-    padding: 20px;
-    height: 87vh;
-    overflow-y: scroll;
+#current-view-wrapper {
+  grid-column: 2/6;
+  padding: 20px;
+  height: 87vh;
+  overflow-y: scroll;
 }
 
-.currentViewHeadingWrapper{
-    font-size: 50px;
-    border-bottom: 1px solid black;
-    width: max-content;
-    margin: 0 auto 40px auto;
-
+.currentViewHeadingWrapper {
+  font-size: 50px;
+  border-bottom: 1px solid black;
+  width: max-content;
+  margin: 0 auto 40px auto;
 }
-.newTaskButton{
-    display: flex;
-    width: max-content;
-    cursor: pointer;
-}
-
-.formSubSection{
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 10px;
-}
-.formSubSection input, textarea{
-    border: 1px solid blue;
-    border-radius: 50px;
-    padding: 5px;
-}
-.newTaskButtonWrapper{
-    display: flex;
-    justify-content: center;
-    gap: 10%;
-}
-.prettyTaskContainer{
-    display: flex;
-    align-items: center;
-    width: 60%;
-    margin: auto;
-    justify-content: space-around;
-    margin-top: 15px;
-    box-shadow: 2px 5px 12px rgb(80, 105, 228);
-    background-color: aliceblue;
-    padding: 10px;
-}
-.prettyTaskContainer p{
-    word-wrap: break-word;
+.newTaskButton {
+  display: flex;
+  width: max-content;
+  cursor: pointer;
 }
 
-#task-checkbox-complete{
-    border-radius: 100%;
+.formSubSection {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
 }
-.taskInfoWrapper{
-    width: 50%;
+.formSubSection input,
+textarea {
+  border: 1px solid blue;
+  border-radius: 50px;
+  padding: 5px;
 }
-.taskDueDateWrapper{
-    display: flex;
-    align-items: center;
-    padding: 3px;
-    border: .3px solid black;
-    width: 100px;
-    justify-content: center;
+.newTaskButtonWrapper {
+  display: flex;
+  justify-content: center;
+  gap: 10%;
 }
-.favEditDeleteTaskWrapper{
-    width: 20%;
-    display: flex;
-    justify-content: space-evenly;
+.prettyTaskContainer {
+  display: flex;
+  align-items: center;
+  width: 60%;
+  margin: auto;
+  justify-content: space-around;
+  margin-top: 15px;
+  box-shadow: 2px 5px 12px rgb(80, 105, 228);
+  background-color: aliceblue;
+  padding: 10px;
+}
+.prettyTaskContainer p {
+  word-wrap: break-word;
 }
 
-.taskCompleteStrike{
-    text-decoration: line-through;
+#task-checkbox-complete {
+  border-radius: 100%;
+}
+.taskInfoWrapper {
+  width: 50%;
+}
+.taskDueDateWrapper {
+  display: flex;
+  align-items: center;
+  padding: 3px;
+  border: 0.3px solid black;
+  width: 100px;
+  justify-content: center;
+}
+.favEditDeleteTaskWrapper {
+  width: 20%;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.taskCompleteStrike {
+  text-decoration: line-through;
 }
 
 /* CENTRAL VIEW SECTION END */
 
-
 /* Edit task form CSS */
-.editTaskForm, .newTaskForm{
-    position: sticky;
-    margin: auto;
-    height: 250px;
-    width: 300px;
-    border: 1px solid;
-    box-shadow: 2px 5px 12px rgb(80, 105, 228);
-    background-color: aliceblue;
-    padding: 10px;
-    pointer-events: auto;
+.editTaskForm,
+.newTaskForm {
+  position: sticky;
+  margin: auto;
+  height: 250px;
+  width: 300px;
+  border: 1px solid;
+  box-shadow: 2px 5px 12px rgb(80, 105, 228);
+  background-color: aliceblue;
+  padding: 10px;
+  pointer-events: auto;
 }
 
 /* FOOTER SECTION START*/
-#footer-wrapper{
-    /* background-color: rgb(190, 231, 244); */
-    grid-column: 1/6;
-    text-align: center;
-    padding: 10px 0 10px 0;
+#footer-wrapper {
+  /* background-color: rgb(190, 231, 244); */
+  grid-column: 1/6;
+  text-align: center;
+  padding: 10px 0 10px 0;
 }
 /* FOOTER SECTION END*/
 
-
-
 /* DARK MODE CSS */
-.lightMode{
-    background-color: rgb(255, 255, 255);
-    color: black;
+.lightMode {
+  background-color: rgb(255, 255, 255);
+  color: black;
 }
 
-.darkMode{
-    background-color: white;
-    color: black;
-    filter: invert(1);
+.darkMode {
+  background-color: white;
+  color: black;
+  filter: invert(1);
 }
 
-.darkModeWrapper{
-    display: flex;
-    justify-content: space-evenly;
-    width: 100px;
+.darkModeWrapper {
+  display: flex;
+  justify-content: space-evenly;
+  width: 100px;
 }
 
 /* BUTTON CSS */
-.newProjectSaveButton, .newProjectCancelButton, .updateTaskButton, .cancelUpdateTaskButton {
+.newProjectSaveButton,
+.newProjectCancelButton,
+.updateTaskButton,
+.cancelUpdateTaskButton {
   align-items: center;
   appearance: none;
-  background-image: radial-gradient(100% 100% at 100% 0, #5adaff 0, #5468ff 100%);
+  background-image: radial-gradient(
+    100% 100% at 100% 0,
+    #5adaff 0,
+    #5468ff 100%
+  );
   border: 0;
   border-radius: 6px;
-  box-shadow: rgba(45, 35, 66, .4) 0 2px 4px,rgba(45, 35, 66, .3) 0 7px 13px -3px,rgba(58, 65, 111, .5) 0 -3px 0 inset;
+  box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,
+    rgba(45, 35, 66, 0.3) 0 7px 13px -3px, rgba(58, 65, 111, 0.5) 0 -3px 0 inset;
   box-sizing: border-box;
   color: #fff;
   cursor: pointer;
   display: inline-flex;
-  font-family: "JetBrains Mono",monospace;
+  font-family: "JetBrains Mono", monospace;
   height: 24px;
   justify-content: center;
   line-height: 1;
@@ -268,26 +275,36 @@
   padding-left: 16px;
   padding-right: 16px;
   text-decoration: none;
-  transition: box-shadow .15s,transform .15s;
+  transition: box-shadow 0.15s, transform 0.15s;
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
   white-space: nowrap;
-  will-change: box-shadow,transform;
+  will-change: box-shadow, transform;
   font-size: 12px;
 }
 
-.newProjectSaveButton:focus, .newProjectCancelButton:focus, .updateTaskButton:focus, .cancelUpdateTaskButton:focus {
-  box-shadow: #3c4fe0 0 0 0 1.5px inset, rgba(45, 35, 66, .4) 0 2px 4px, rgba(45, 35, 66, .3) 0 7px 13px -3px, #3c4fe0 0 -3px 0 inset;
+.newProjectSaveButton:focus,
+.newProjectCancelButton:focus,
+.updateTaskButton:focus,
+.cancelUpdateTaskButton:focus {
+  box-shadow: #3c4fe0 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px,
+    rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #3c4fe0 0 -3px 0 inset;
 }
 
-.newProjectSaveButton:hover,.newProjectCancelButton:hover, .updateTaskButton:hover, .cancelUpdateTaskButton:hover  {
-  box-shadow: rgba(45, 35, 66, .4) 0 4px 8px, rgba(45, 35, 66, .3) 0 7px 13px -3px, #3c4fe0 0 -3px 0 inset;
+.newProjectSaveButton:hover,
+.newProjectCancelButton:hover,
+.updateTaskButton:hover,
+.cancelUpdateTaskButton:hover {
+  box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px,
+    rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #3c4fe0 0 -3px 0 inset;
   transform: translateY(-2px);
 }
 
-.newProjectSaveButton:active, .newProjectCancelButton:active, .updateTaskButton:active, .cancelUpdateTaskButton:active {
+.newProjectSaveButton:active,
+.newProjectCancelButton:active,
+.updateTaskButton:active,
+.cancelUpdateTaskButton:active {
   box-shadow: #3c4fe0 0 3px 7px inset;
   transform: translateY(2px);
 }
-
